--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="gogoro_LOGO">
-                    <img src="/img/LOGO.svg" alt="">
+                    <img src="./img/LOGO.svg" alt="">
                 </div>
 
                 <div class="phone_member_right">
@@ -175,7 +175,7 @@
 
     <div class="banner d-flex row m-0">
         <div class="img_container col-12 col-lg-7 p-0">
-            <img class="top_banner_img" src="/img/top_banner-1.jpg" alt="">
+            <img class="top_banner_img" src="./img/top_banner-1.jpg" alt="">
         </div>
         <div class="text_container col-12 col-lg-5 p-0 d-flex">
             <div class="text">
@@ -212,7 +212,7 @@
                 <!-- -----------------------card-1 start-------------------------- -->
                 <div class="card_items row">
                     <div class="px-3 col-12 col-lg-6 p-0" style="">
-                        <img src="/img/card_img-1.jpg" class="card-img-top" alt="...">
+                        <img src="./img/card_img-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p>November 16,2021</p>
                             <h3 class="card-title">Gates and Gogoro Announce Exclusive Strategic Partnership to
@@ -224,7 +224,7 @@
                     </div>
                     <!-- -----------------------card-1 end-------------------------- -->
                     <div class="px-3 col-12 col-lg-6 p-0" style="">
-                        <img src="/img/card_img-2.jpg" class="card-img-top" alt="...">
+                        <img src="./img/card_img-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p>November 16,2021</p>
                             <h3 class="card-title">Gates and Gogoro Announce Exclusive Strategic Partnership to
@@ -236,7 +236,7 @@
                     </div>
                     <!-- -----------------------card-2 end-------------------------- -->
                     <div class="px-3 col-12 col-lg-6 col-xl-4 p-0" style="">
-                        <img src="/img/card_img-3.png" class="card-img-top" alt="...">
+                        <img src="./img/card_img-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p>October 01,2021</p>
                             <h3 class="card-title">Gates and Gogoro Announce Exclusive Strategic Partnership to
@@ -248,7 +248,7 @@
                     </div>
                     <!-- -----------------------card-3 end-------------------------- -->
                     <div class="px-3 col-12 col-lg-6 col-xl-4 p-0" style="">
-                        <img src="/img/card_img-4.png" class="card-img-top" alt="...">
+                        <img src="./img/card_img-4.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p>October 01,2021</p>
                             <h3 class="card-title">Gates and Gogoro Announce Exclusive Strategic Partnership to
@@ -260,7 +260,7 @@
                     </div>
                     <!-- -----------------------card-4 end-------------------------- -->
                     <div class="px-3 col-12 col-lg-6 col-xl-4 p-0" style="">
-                        <img src="/img/card_img-5.jpg" class="card-img-top" alt="...">
+                        <img src="./img/card_img-5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p>October 06,2021</p>
                             <h3 class="card-title">Gates and Gogoro Announce Exclusive Strategic Partnership to
@@ -272,7 +272,7 @@
                     </div>
                     <!-- -----------------------card-5 end-------------------------- -->
                     <div class="px-3 col-12 col-lg-6 col-xl-4 p-0" style="">
-                        <img src="/img/card_img-6.jpg" class="card-img-top" alt="...">
+                        <img src="./img/card_img-6.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p>October 11,2021</p>
                             <h3 class="card-title">Gates and Gogoro Announce Exclusive Strategic Partnership to
@@ -284,7 +284,7 @@
                     </div>
                     <!-- -----------------------card-6 end-------------------------- -->
                     <div class="px-3 col-12 col-lg-6 col-xl-4 p-0" style="">
-                        <img src="/img/card_img-7.jpg" class="card-img-top" alt="...">
+                        <img src="./img/card_img-7.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p>November 26,2021</p>
                             <h3 class="card-title">Gates and Gogoro Announce Exclusive Strategic Partnership to
@@ -296,7 +296,7 @@
                     </div>
                     <!-- -----------------------card-7 end-------------------------- -->
                     <div class="px-3 col-12 col-lg-6 col-xl-4 p-0" style="">
-                        <img src="/img/card_img-8.jpg" class="card-img-top" alt="...">
+                        <img src="./img/card_img-8.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p>November 28,2021</p>
                             <h3 class="card-title">Gates and Gogoro Announce Exclusive Strategic Partnership to
@@ -317,32 +317,32 @@
             <div class="container">
                 <div class="row flex-column flex-lg-row">
                     <div class="footer_logo_icons col-8 col-lg-4">
-                        <img src="/img/LOGO_white.svg" alt="">
+                        <img src="./img/LOGO_white.svg" alt="">
 
                         <div class="social_grop pt-3 d-flex flex-row">
                             <div class="footer_icons mt-3 d-flex flex-wrap ">
                                 <div class="fb_grop d-flex align-items-center p-0 my-1 col-6 col-lg-12">
-                                    <img src="/img/fb.svg" alt="">
+                                    <img src="./img/fb.svg" alt="">
                                     <p class="m-0 mx-2 py-1">Facebook</p>
                                 </div>
                                 <!-- <i class="fab fa-facebook-square"><span></span> Facebook </i> -->
                                 <div class="fb_grop d-flex align-items-center p-0 my-1 col-6 col-lg-12">
-                                    <img src="/img/twitter.svg" alt="">
+                                    <img src="./img/twitter.svg" alt="">
                                     <p class="m-0 mx-2 py-1">Twitter</p>
                                 </div>
                                 <!-- <i class="fab fa-twitter"><span></span> Twitter</i> -->
                                 <div class="linkedin_grop d-flex align-items-center p-0 my-1 col-6 col-lg-12">
-                                    <img src="/img/link.svg" alt="">
+                                    <img src="./img/link.svg" alt="">
                                     <p class="m-0 mx-2 py-1">Linkedin</p>
                                 </div>
                                 <!-- <i class="fab fa-linkedin"><span></span> Linkedin</i> -->
                                 <div class="linkedin_grop d-flex align-items-center p-0 my-1 col-6 col-lg-12">
-                                    <img src="/img/yt.svg" alt="">
+                                    <img src="./img/yt.svg" alt="">
                                     <p class="m-0 mx-2 py-1">Youtube</p>
                                 </div>
                                 <!-- <i class="fab fa-youtube"><span></span> Youtube</i> -->
                                 <div class="linkedin_grop d-flex align-items-center p-0 my-1 col-6 col-lg-12">
-                                    <img src="/img/insta.svg" alt="">
+                                    <img src="./img/insta.svg" alt="">
                                     <p class="m-0 mx-2 py-1">Instagram</p>
                                 </div>
                                 <!-- <i class="fab fa-instagram"><span></span> Instagram</i> -->
